# Task1328C

./: CMakeLists.txt  README.md
include/: TernaryNumber.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test1.cpp  test2.cpp
